<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="plus_minus">±</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="precent">%</string>

    <string name="reciprocal">1/x</string>
    <string name="square">x²</string>
    <string name="square_root">√x</string>

    <string name="clear_entry">CE</string>
    <string name="clear_all">C</string>
    <string name="clear_symbol">⌫</string>

    <string name="memory_clear">MC</string>
    <string name="memory_read">MR</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>

    <string name="error">error-</string>
</resources>