<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:columnCount="4"
        android:rowCount="10"
        android:background="@drawable/calc_border"
        android:rowOrderPreserved="false"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/Label2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="4"
            android:backgroundTint="#FF9800"
            android:ellipsize="end"
            android:gravity="end|bottom"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Label1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="4"
            android:ellipsize="end"
            android:gravity="end|bottom"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_rowWeight="0.05"
            android:layout_columnSpan="4"
            android:layout_marginTop="2dp"
            android:background="#FFFFFF" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/memory_clear" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/memory_read" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/memory_plus" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/memory_minus" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/precent" />

        <Button
            style="@style/SqBtn_lightgrey"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/clear_entry" />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/clear_all" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/clear_symbol" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/reciprocal" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/square" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/square_root" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/divide" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/seven" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/eight" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/nine" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/multiply" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/four" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/five" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/six" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/minus" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/one" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/two" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/three" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_lightgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/plus" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/plus_minus" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/zero" />

        <Button
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/SqBtn_darkgrey"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/dot" />

        <Button
            style="@style/SqBtn_pink"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/equals" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>